--- a/Wedding01/Wedding01.csproj
+++ b/Wedding01/Wedding01.csproj
@@ -6,10 +6,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
 	<RazorCompileOnPublish>false</RazorCompileOnPublish>
     <MvcRazorCompileOnPublish>false</MvcRazorCompileOnPublish>
+    <UserSecretsId>3e582fc7-68e9-4c34-9475-01adb2beeb5d</UserSecretsId>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.8" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
   </ItemGroup>
 
 </Project>
